fix: use visibility instead of display for screenreader-info

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,7 +119,7 @@ fieldset {
 }
 
 .screenreader-info {
-    display: none;
+    visibility: hidden;
 }
 
 .mt-2 {
